# HOT-Step-CPP

./: .dockerignore  .env.docker  .gitignore  .gitmodules  Dockerfile  FEATURES.md  Important.md  LAUNCH.bat  PERFORMANCE_OPTIMIZATIONS.md  README.md  adding-solvers.md  dev-rebuild.bat  dev.bat  dev.sh  docker-compose.yml  gui_err.txt  install.bat  install.sh  launch.sh  package-release.sh  process_err.txt  scan_err.txt  scan_out.txt  update.sh
.claude/skills/adapter-system/: SKILL.md
.claude/skills/debugging-runtime/: SKILL.md
.claude/skills/release-process/: SKILL.md
.claude/skills/server-feature-dev/: reference.md
.github/workflows/: cache-warm.yml  release.yml
.work/: wrapper_resilience_progress.md
adapters/: README.md
docker/: entrypoint.sh
docs/: PLUGINS.md  RELEASING.md  release-notes-next.md  release-notes-v1.2.0.md
docs/plans/: 2026-04-19-waveform-player-design.md  2026-05-03-model-manager-design.md  dcw-correction-fixes.md  linux-release-support.md  syncing with acestepcpp - implementation_plan.md
engine/: .clangd  CMakeLists.txt  README.md  UPSTREAM_SYNC  build-mac.sh  build.cmd  buildall.cmd  buildcuda.cmd  buildvulkan.cmd  buildwebui.sh  convert-sa3.py  scan_err.txt
engine/docs/: ARCHITECTURE.md
engine/examples/: ace-understand.sh  dit-only-sft.json  dit-only-sft.sh  dit-only.json  dit-only.sh  full-sft.json  full-sft.sh  full.json  full.sh  lego.json  lego.sh  partial-sft.json  partial-sft.sh  partial.json  partial.sh  simple-batch.json  simple-batch.sh  simple-sft.json  simple-sft.sh  simple.cmd  simple.json  simple.sh
engine/ggml/include/: ggml-alloc.h  ggml-backend.h  ggml.h
engine/ggml/scripts/: sync-llama.last
engine/ggml/src/: ggml-alloc.c  ggml-backend.cpp  ggml.c
engine/ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
engine/ggml/src/ggml-cuda/: col2im-1d.cu  cpy.cu  ggml-cuda.cu  snake.cu  snake.cuh
engine/ggml/src/ggml-metal/: ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.metal
engine/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
engine/ggml/src/ggml-vulkan/vulkan-shaders/: snake.comp  vulkan-shaders-gen.cpp
engine/plugins/guidance/: apg.lua  cfg_pp.lua  dynamic_cfg.lua  rescaled_cfg.lua
engine/plugins/solvers/: dpm2m.lua  dpm2m_ada.lua  dpm3m.lua  euler.lua  heun.lua  jkass_fast.lua  jkass_quality.lua  rk4.lua  sde.lua
engine/src/: adapter-cancel.h  adapter-merge.h  adapter-runtime.h  adapter-trt.h  alignment-config.h  audio-io.h  backend.h  config-json.h  convrot.h  dcw.h  denoiser.h  dit-alignment-graph.h  dit-graph.h  dit-sampler.h  dit-trt.h  dit.h  gguf-weights.h  hot-step-params.h  hot-step-sampler-trt.h  hot-step-sampler.h  lm-trt.h  lm-trtllm.h  lrc-alignment.h  lua-plugin-registry.h  lua-plugin.h  metadata-fsm.h  model-registry.h  model-store.cpp  model-store.h  pipeline-lm.cpp  pipeline-lm.h  pipeline-synth-impl.h  pipeline-synth-ops.cpp  pipeline-synth-ops.h  pipeline-synth.cpp  pipeline-synth.h  pipeline-understand.cpp  pipeline-understand.h  prompt.h  qwen3-enc.h  (+21 more)
engine/src/guidance/: apg-core.h  guidance-implementations.h  guidance-interface.h
engine/src/schedulers/: scheduler-implementations.h  scheduler-interface.h  scheduler-registry.h
engine/src/solvers/: solver-dopri.h  solver-dpm.h  solver-euler.h  solver-heun.h  solver-interface.h  solver-jkass.h  solver-registry.h  solver-rfsolver.h  solver-rk4.h  solver-sde.h  solver-stork.h  solver-stork4-constants.h
engine/tests/: Makefile  debug-detok-cossim.py  debug-dit-cossim.sh  debug-lm-logits.py  debug-lm-logits.sh  debug-tok-cossim.py  test-philox.py
engine/tools/: ace-lm.cpp  ace-midi.cpp  ace-server.cpp  ace-synth.cpp  ace-understand.cpp  hot-step-server.cpp  neural-codec.cpp  sa3-ggml-test.cpp  synth-batch-runner.h  vst-host.cpp
engine/tools/webui/: package.json
engine/tools/webui/src/components/: RequestForm.svelte  SongCard.svelte
engine/tools/webui/src/lib/: api.ts  config.ts  db.ts  fields.ts  state.svelte.ts  types.ts
models/: README.md
plugins/: README.md
plugins/docs/: MD_HT_Scheduler_User_Manual.md  MD_Trajectory_Anchor_V5_User_Manual.md
plugins/guidance/: md_clarity_v1.lua
plugins/postprocess/: md_audio_tiled.lua  md_audio_tiled_core.lua
plugins/schedulers/: md_ht_scheduler_V3.lua
plugins/solvers/: euler_fullloop.lua  md_confluence_v4.lua  md_dual_time_v2.lua  md_eigenflow_v1.lua  md_hamiltonian_v2.lua  md_omni_relational_V3.lua  md_solver_commons.lua  md_storm_core_V4.lua  md_trajectory_anchor_V3.lua  md_trajectory_anchor_V5.lua  md_vortex_v1.lua  storm_sampler_core.lua
release/: HOT-Step.bat  README.txt  build-release.ps1  esbuild.config.mjs
server/: migrate_lireek.cjs  package-lock.json  package.json  restart-loop.cmd  tsconfig.json
server/server/data/: hotstep.db-wal
server/src/: config.ts  engineState.ts  index.ts
server/src/data/: assistant-knowledge.md  model-registry.json
server/src/db/: database.ts  lireekDb.ts
server/src/routes/: adapters.ts  analyze.ts  coverArt.ts  download.ts  generate.ts  health.ts  inspire.ts  lireek.ts  logs.ts  mastering.ts  modelManager.ts  models.ts  profiles.ts  settings.ts  shutdown.ts  songBuilder.ts  songs.ts  stemStudio.ts  supersep.ts  upload.ts  vst.ts
server/src/services/: aceClient.ts  audioConvert.ts  audioCrop.ts  audioMetadata.ts  (+9 more)
tools/: perceptual_analysis.py  quantize-all-exp.bat  quantize-exp.cpp  steps_benchmark.py
tools/mcp-lyricstudio/: package.json
tools/onnx-export/: README.md  convert_sa3_fp16.py  dump_sa3_goldens.py  dump_sa3_same_stages.py  e2e_sa3_ort.py  export_cond_enc.py  export_dit.py  export_fp8_dit.py  export_lm.py  export_pp_vae.py  export_sa3_conditioners.py  export_sa3_dit.py  export_sa3_same.py  export_vae.py  export_vae_encoder.py  test_trt_vae.py
tools/supersep/: HUGGINGFACE_README.md  README.md  convert_models.py  requirements.txt
tools/trtllm-test/: test_phase2_quality.py
ui/: generate_translations.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  types.ts
(+179 files in other folders)
